workflow alert tweak

--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -14,7 +14,7 @@
     {% for object in object_list %}
       {% include "lit/fragments/workflow_row.html" %}
     {% endfor %}
-    <div class="alert alert-info text-center show-only-child">No workflows created (yet).</div>
+    <div class="alert alert-info text-center show-only-child d-flex justify-content-center">No workflows created (yet).</div>
   </div>
 {% endblock %}
 
