--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -19,7 +19,7 @@
           {% endif %}
           <a class="dropdown-item" href="{{ object.get_clear_cache_url }}">Clear assessment cache</a>
           <a class="dropdown-item" href="{{ object.get_assessment_logs_url }}">View change logs</a>
-          <a class="dropdown-item" hx-get="{% url 'assessment:attachment-htmx' object.pk 'create' %}" hx-trigger="click" hx-target="#attach_table" hx-swap="outerHTML" href="/">Add an attachment</a>
+          <a class="dropdown-item" hx-get="{% url 'assessment:attachment-htmx' object.pk 'create' %}" hx-trigger="click" hx-target="#attach-tbody" hx-swap="afterBegin" href="/">Add an attachment</a>
           <a class="dropdown-item" href="{% url 'assessment:dataset_create' object.pk %}">Add a dataset</a>
           <a class="dropdown-item" href="{% url 'assessment:values-create' object.pk %}">Add a value</a>
           <div class="dropdown-divider"></div>
