--- a/hawc/apps/eco/templates/eco/fragments/_create_card.html
+++ b/hawc/apps/eco/templates/eco/fragments/_create_card.html
@@ -1,3 +1,3 @@
 <h3 class="card-title">{{title}}
-  <button id="{{model}}-create" class="btn btn-sm btn-primary float-right" hx-get="{{hx_get}}" hx-target="{{hx_target}}" hx-swap="outerHTML"><i class="fa fa-plus fa-fw"></i>&nbsp;Create</button>
+  <button id="{{model}}-create" class="btn btn-sm btn-primary float-right" hx-get="{{hx_get}}" hx-target="{{hx_target}}" hx-swap="beforeend"><i class="fa fa-plus fa-fw"></i>&nbsp;Create</button>
 </h3>
