--- a/hawc/apps/eco/templates/eco/fragments/_delete_rows.html
+++ b/hawc/apps/eco/templates/eco/fragments/_delete_rows.html
@@ -1,6 +1,7 @@
-<script>
-  elements = document.getElementsByName("#{{attribute}}-{{id}}")
+<script id="delete-script">
+  elements = document.getElementsByClassName("{{attribute}}-{{id}}")
   while (elements.length > 0){
     elements[0].parentNode.removeChild(elements[0]);
   }
+  document.getElementById("delete-script").remove()
 </script>
