--- a/hawc/apps/eco/templates/eco/fragments/_object_edit_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/_object_edit_row.html
@@ -18,7 +18,7 @@
               Save
             </button>
             <button id="{{model}}-cancel" class="btn btn-sm btn-light" type='button'
-                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.eco-edit-row'))"><i
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.eco-edit-row'), true)"><i
               class="fa fa-fw fa-times mr-1"></i>
               Cancel</button>
           {% endif %}
