--- a/hawc/apps/epiv2/templates/epiv2/fragments/_create_one.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_create_one.html
@@ -1,7 +1,5 @@
-<tr hx-target="this" class="{% if not text %} hidden {% endif %} epiv2-edit-row {{class}}">
-  {% if text %}
-    <td colspan="100%">
-      <p class="text-center mb-0">No {{text}} to display. Click "Add Row" to create one.</p>
-    </td>
-  {% endif %}
+<tr class="show-only-child">
+  <td colspan="100%">
+    <p class="text-center mb-0">No {{text}} to display. Click "Add Row" to create one.</p>
+  </td>
 </tr>
