--- a/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
@@ -1,7 +1,7 @@
 <tr hx-target="this" hx-swap="outerHTML swap:0s" class="epiv2-edit-row {{model}}-edit-row">
   {% if form %}
     <td colspan="100%">
-      <form method="post" class="border my-2 p-2 pb-5 edit-form-background form-{{model}}">
+      <form method="post" class="border my-2 p-2 pb-5 edit-form-background form-{{model}} pad-form">
         <div class="d-flex justify-content-end">
           {% include "common/scientific_pulldown.html" %}
         </div>
@@ -18,7 +18,7 @@
               Save
             </button>
             <button id="{{model}}-cancel" class="btn btn-sm btn-light" type='button'
-                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.epiv2-edit-row'))"><i
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.epiv2-edit-row'), true)"><i
               class="fa fa-fw fa-times mr-1"></i>
               Cancel</button>
           {% endif %}
