--- a/hawc/apps/assessment/templates/assessment/fragments/attachment_row.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/attachment_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML">
+<tr hx-target="this" hx-swap="outerHTML" class="attachment-detail-row">
   <td>
     <a href="{{ object.get_absolute_url }}">{{object.title}}</a>
     {% if canEdit or permissions.edit %}
