rename attachment css rule

--- a/hawc/apps/assessment/templates/assessment/fragments/attachment_list.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/attachment_list.html
@@ -1,4 +1,4 @@
-<div id="attach_table">
+<div class="hide-empty-table">
   <h2>Attachments</h2>
   <table class="table table-sm table-striped">
     <colgroup>
