--- a/hawc/apps/epiv2/templates/epiv2/fragments/_create_card.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_create_card.html
@@ -1,3 +1,3 @@
 <h3 class="card-title">{{title}}
-  <button class="btn btn-sm btn-primary float-right" hx-get="{{hx_get}}" hx-target="{{hx_target}}" hx-swap="beforeend show:top"><i class="fa fa-plus fa-fw"></i>&nbsp;Add Row</button>
+  <button class="btn btn-sm btn-primary float-right" hx-get="{{hx_get}}" hx-target="{{hx_target}}" hx-swap="beforeend"><i class="fa fa-plus fa-fw"></i>&nbsp;Add Row</button>
 </h3>
