reduce repeated htmx fragments

--- a/hawc/apps/eco/templates/eco/fragments/cause_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/cause_row.html
@@ -5,5 +5,5 @@
   <td>{{object.level }}</td>
   <td>{{object.level_units }}</td>
   <td>{{object.comments }}</td>
-  {% include "eco/fragments/_object_row.html" with model="cause" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="cause" %}
 </tr>
