--- a/hawc/apps/eco/templates/eco/fragments/result_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/result_row.html
@@ -10,5 +10,5 @@
     {% endfor %}
   </td>
   <td>{{object.derived_value }}</td>
-  {% include "eco/fragments/_object_row.html" with model="result" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="result" %}
 </tr>
