--- a/hawc/apps/common/templates/common/fragments/_create_one.html
+++ b/hawc/apps/common/templates/common/fragments/_create_one.html
@@ -1,5 +1,5 @@
 <tr class="show-only-child">
   <td colspan="100%">
-    <p class="text-center mb-0">No {{text}}. Create one?</p>
+    <p class="text-center mb-0">{{text}}</p>
   </td>
 </tr>
