--- a/hawc/apps/eco/templates/eco/fragments/effect_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/effect_row.html
@@ -5,5 +5,5 @@
   <td>{{object.units }}</td>
   <td>{{object.as_reported }}</td>
   <td>{{object.comments }}</td>
-  {% include "eco/fragments/_object_row.html" with model="effect" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="effect" %}
 </tr>
