--- a/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
@@ -7,5 +7,5 @@
     {% endfor %}
   </td>
   <td>{{object.comments|default:"-"}}</td>
-  {% include "epiv2/fragments/_object_row.html" with model="adjustmentfactor" %}
+  {% include "common/fragments/_object_row.html" with app="epiv2" model="adjustmentfactor" %}
 </tr>
