--- a/hawc/apps/epiv2/templates/epiv2/fragments/chemical_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/chemical_row.html
@@ -1,5 +1,5 @@
 <tr hx-target="this" hx-swap="outerHTML" class="epiv2-obj-row {{action}} chemical-{{object.id}}">
   <td>{{object.name}}</td>
   <td>{{object.dsstox.verbose_link|safe|default:"-"   }}</td>
-  {% include "epiv2/fragments/_object_row.html" with model="chemical" %}
+  {% include "common/fragments/_object_row.html" with app="epiv2" model="chemical" %}
 </tr>
