--- a/hawc/apps/epiv2/templates/epiv2/fragments/data_extraction_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/data_extraction_row.html
@@ -8,5 +8,5 @@
   <td>{{object.get_estimate_value}}</td>
   <td>{{object.confidence|default:"-"}}</td>
   <td>{{object.comments|default:"-"}}</td>
-  {% include "epiv2/fragments/_object_row.html" with model="dataextraction" %}
+  {% include "common/fragments/_object_row.html" with app="epiv2" model="dataextraction" %}
 </tr>
