--- a/hawc/apps/udf/templates/udf/udf_list.html
+++ b/hawc/apps/udf/templates/udf/udf_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="d-flex align-items-start">
-    <h2 class="mt-0 mb-2">User Defined Forms</h2>
+    <h2 class="mt-0 mb-2">User Defined Fields</h2>
     <a class="ml-auto btn btn-primary mt-1" href="{% url 'udf:udf_create' %}">Create a form</a>
   </div>
   <div class="list-group mb-4">
