add user email as hover-over for team member and higher

--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -147,7 +147,7 @@
             <p><strong>Project manager{{ object.project_manager.all|pluralize }}</strong></p>
             <ul class="mb-0">
               {% for m in object.project_manager.active %}
-                <li>{{ m.get_full_name }}</li>
+                <li title="{{m.email}}">{{ m.get_full_name }}</li>
               {% endfor %}
             </ul>
           </td>
@@ -155,7 +155,7 @@
             <p><strong>Team member{{ object.team_members.all|pluralize }}</strong></p>
             <ul class="mb-0">
               {% for m in object.team_members.active %}
-                <li>{{ m.get_full_name }}</li>
+                <li title="{{m.email}}">{{ m.get_full_name }}</li>
               {% empty %}
                 <li><i>None assigned</i></li>
               {% endfor %}
@@ -165,7 +165,7 @@
             <p><strong>Reviewer{{ object.reviewers.all|pluralize }}</strong></p>
             <ul class="mb-0">
               {% for m in object.reviewers.active %}
-                <li>{{ m.get_full_name }}</li>
+                <li title="{{m.email}}">{{ m.get_full_name }}</li>
               {% empty %}
                 <li><i>None assigned</i></li>
               {% endfor %}
