Assessment Detail/Value adjustments (#1028)
* replace value validation check with info alert on detail page

* Update forms.py

* format

* update visibility of warning and changes from review

* limit number of decimal places in displayed values

* (unrelated) - fix bug in make.bat sync-dev

* add migration

* move logic from view to model; edit template layout

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
@@ -65,6 +65,14 @@
       {% endfor %}
     </tbody>
   </table>
+  {% if obj_perms.edit and object.check_calculated_value.show_warning %}
+    {% alert warning %}
+      <p><b>Note: this message only appears to team members and higher.</b></p>
+      <p>
+        The calculated {{object.get_value_type_display}} ({{object.check_calculated_value.calculated_value|stringformat:'.3g'}} {{object.value_unit|default:""}}), is > {{object.check_calculated_value.tolerance|percentage}} different than the reported value ({{object.value}} {{object.value_unit|default:""}}). The calculated value was generated using the formula POD / UF, or {{object.pod_value}} / {{object.uncertainty}} = {{object.check_calculated_value.calculated_value|stringformat:'.3g'}}. This difference may be due to the level of precision the {{object.get_value_type_display}} is reported, but please review in case of an error.
+      </p>
+    {% endalert %}
+  {% endif %}
 {% endblock %}
 
 {% block extrajs %}
