--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -58,6 +58,11 @@
           summaryForms.exploratoryHeatmapFormAppStartup(mainElement.get(0), config, djangoForm);
           mainElement.show();
         });
+      } else if (config.visual_type === 9){
+        window.app.startup("summaryFormsStartup", function (summaryForms) {
+          summaryForms.prismaFormAppStartup(mainElement.get(0), config, djangoForm);
+          mainElement.show();
+        });
       } else {
         const mountElement = $('.tabbable');
         mountElement.show();
