Refactor HTMX Viewsets (#1012)
* refactor lit.workflow

* workflow alert tweak

* assessment attachments update

* update eco

* epiv2 updates

* attachment scroll animation update

* rename attachment css rule

* fix table striping

* remove animation test

* reduce repeated htmx fragments

* remove tester code

* remove unused variable

* rename class for clarity

* make script ID more specific

* add trailing newline

* use helpers instead of manual html

* add a few more newline characters

---------

Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>

--- a/hawc/apps/eco/templates/eco/fragments/effect_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/effect_row.html
@@ -1,12 +1,9 @@
-<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}}" id="effect-{{object.id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}} effect-{{object.id}}">
   <td>{{object.name}}</td>
   <td>{{object.term.name}}</td>
   <td>{{object.species }}</td>
   <td>{{object.units }}</td>
   <td>{{object.as_reported }}</td>
   <td>{{object.comments }}</td>
-  {% include "eco/fragments/_object_row.html" with model="effect" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="effect" %}
 </tr>
-{% if action == 'create' or action == 'clone' %}
-  <tr class="hidden eco-edit-row effect-edit-row" hx-target="this"></tr>
-{% endif %}
