--- a/hawc/apps/epiv2/templates/epiv2/fragments/exposure_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/exposure_row.html
@@ -10,8 +10,5 @@
     {% else %}-{% endif %}
   </td>
   <td>{{object.measurement_timing|default:"-"}}</td>
-  {% include "epiv2/fragments/_object_row.html" with model="exposure" %}
+  {% include "common/fragments/_object_row.html" with app="epiv2" model="exposure" %}
 </tr>
-{% if action == 'create' or action == 'clone' %}
-  <tr class="hidden exposure-edit-row" hx-target="this"></tr>
-{% endif %}
