--- a/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
@@ -4,8 +4,5 @@
   <td>{{object.exposure_measurement}}</td>
   <td>{{object.exposure_html}}</td>
   <td>{{object.comments|default:"-"}}</td>
-  {% include "epiv2/fragments/_object_row.html" with model="exposurelevel" %}
+  {% include "common/fragments/_object_row.html" with app="epiv2" model="exposurelevel" %}
 </tr>
-{% if action == 'create' or action == 'clone' %}
-  <tr class="hidden exposurelevel-edit-row" hx-target="this"></tr>
-{% endif %}
