--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -933,7 +933,7 @@ div.udf-info-row>p, div.udf-info-row>div.card>p {
     display: none;
 }
 .show-only-child:only-child {
-    display: initial;
+    display: revert;
 }
 
 /* table column text alignment */
@@ -988,6 +988,20 @@ div.udf-info-row>p, div.udf-info-row>div.card>p {
 .col-l-12 td:nth-child(12),
 .col-l-12 th:nth-child(12) {
     text-align: left;
+}
+
+.hide-empty-tbody {
+    display: none;
+}
+.hide-empty-tbody:has(tbody>tr) {
+    display: revert;
+}
+
+.table-striped-invert tbody tr.epiv2-obj-row:nth-of-type(even) {
+    background-color: #ffffff;
+}
+.table-striped-invert tbody tr.epiv2-obj-row:nth-of-type(odd) {
+    background-color: #f0f4f9;
 }
 
 /* anchor links */
