--- a/hawc/apps/assessment/templates/assessment/fragments/attachment_edit_row.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/attachment_edit_row.html
@@ -1,8 +1,8 @@
 
-<tr hx-target="this" hx-swap="outerHTML">
+<tr hx-target="this" hx-swap="outerHTML" class="attachment-edit-row">
   {% if form %}
-    <td colspan="3">
-      <form class="attachment-form" method="post" enctype="multipart/form-data">
+    <td colspan="3" class="bg-lightblue">
+      <form class="attachment-form pad-form p-3" method="post" enctype="multipart/form-data">
         {% crispy form %}
         <div class="form-row d-flex flex-row-reverse px-3 pb-3">
           {% if form.instance.id %}
@@ -24,7 +24,7 @@
             </button>
             <button class="btn btn-light"
                     type='button'
-                    onclick="$(this).closest('tr').remove()">
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.attachment-edit-row'), true)">
               Cancel
             </button>
           {% endif %}
