--- a/hawc/apps/eco/templates/eco/fragments/cause_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/cause_row.html
@@ -1,12 +1,9 @@
-<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}}" id="cause-{{object.id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}} cause-{{object.id}}">
   <td>{{object.name}}</td>
   <td>{{object.term.name}}</td>
   <td>{{object.species }}</td>
   <td>{{object.level }}</td>
   <td>{{object.level_units }}</td>
   <td>{{object.comments }}</td>
-  {% include "eco/fragments/_object_row.html" with model="cause" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="cause" %}
 </tr>
-{% if action == 'create' or action == 'clone' %}
-  <tr class="hidden eco-edit-row cause-edit-row" hx-target="this"></tr>
-{% endif %}
