--- a/hawc/apps/eco/templates/eco/fragments/result_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/result_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}}" id="result-{{object.id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}} result-{{object.id}} cause-{{object.cause.id}} effect-{{object.effect.id}}">
   <td>{{object.name}}</td>
   <td>{{object.cause.name}}</td>
   <td>{{object.effect.name }}</td>
@@ -10,8 +10,5 @@
     {% endfor %}
   </td>
   <td>{{object.derived_value }}</td>
-  {% include "eco/fragments/_object_row.html" with model="result" %}
+  {% include "common/fragments/_object_row.html" with app="eco" model="result" %}
 </tr>
-{% if action == 'create' or action == 'clone' %}
-  <tr class="hidden eco-edit-row result-edit-row" hx-target="this"></tr>
-{% endif %}
