Add UDF logs (#1023)
* add udf logs

* readd workflow absolute_url

* add reversion information to django admin (read only)

* add logging to UDF actions

* add a unique_together constraint check

* move to form instead of view

* add new middleware to get request or user anywhere

* add user to udf content

* fix form preview update bug

* update how disabling UDF schema is handled; wrap in a disabled fieldset

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -12,11 +12,15 @@
   <script>
     $(window).ready(function() {
       $("#schema-preview-btn").on("click", function() {
-        $("#schema-preview-frame").removeClass('show');
+        $("#schema-preview-fieldset").removeClass('show');
+      });
+      $("#submit-id-save").on("click", function() {
+        // disable so that the required fields on a UDF preview aren't checked in form validation
+        $("#schema-preview-fieldset").attr('disabled', true);
       });
       $("#schema-preview-btn").on("htmx:afterOnLoad", function() {
         window.app.HAWCUtils.dynamicFormListeners();
-        $("#schema-preview-frame").collapse("show");
+        $("#schema-preview-fieldset").collapse("show").attr('disabled', false);
       });
       $('#load-example').on("click", function(e){
         e.preventDefault();
